[package]
name = "torch_beats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {version="0.11.7", features = ["client", "standard_framework", "voice"]}
songbird = "0.3.2"
tokio = {version = "1.34.0", features = ["full"]}
tracing-subscriber = "0.3.18"
